css/style.css
.nav {
  display: flex;
  width: 100vw;
  margin: 0%;
  background: linear-gradient(180deg, #68523f 0%, #876D57 100%);
  height: 121px;
  flex-shrink: 0;
  gap: 10px;
  border-bottom: 1px solid;
  border-color: black;
}

a{
  text-decoration: none;
  color: white;
  margin-right:20px;
  transition: 1s;
}

a:hover{
  color: white;
  transition: 0.5s;
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: black;
  text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
}

.left {
  align-self: flex-end;
  margin-left: 0%;
  margin-bottom: 10px;
  color: #FFF;
  font-size: 18px;
  font-family: "Lemon Milk","Catamaran";
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.right{
  margin-left: auto;
  margin-right: 10%;
  align-self: flex-end;
  margin-bottom: 10px;
  color: #FFF;
  font-size: 18px;
  font-family: "Lemon Milk","Catamaran";
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.logo {
  margin-left:10%;
  margin right:0%;
  margin-top: 0%;
  flex-shrink: 0;
}

h1{
  color: #FFF;
  font-size: 38px;
  font-family: "Century Gothic";
  font-style: normal;
  font-weight: 400;
  line-height: normal;

  
}

h2{
  color: #FFF;
  font-size: 40px;
  font-family: "Lemon Milk","Catamaran";
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.photo1{
  margin-top: 100px;
  margin-left: auto;
  margin-right: 10%;
}

.hi{
  display: flex;
}

.name{
  flex-direction: column;
  margin-left: 11.5%;
  margin-top: 200px;
}

.icon{
  justify-self: space-between;
  margin-left:50%;
  margin-right: 50%;
}

.hero2{
  display: flex;
  margin-right: 11.5%;
  margin-left: 11.5%;
}

.intro{
  margin-top:100px;
  margin-left: 100px;
  font-family: "Century Gothic";
  font-weight: 500;
  color: white;
  line-height: 30px;
}

.cases{
  display: flex;
  margin: 11.5%;
  justify-content: space-between;
}

body{
  background-color:#755E4A ;
  margin: 0px;
}

.foot{
  display: flex;
  margin: 0%;
  margin-top: auto;
  background: linear-gradient(360deg, #5f4b3a 0%, #876D57 100%);
  height: 150px;
  width: 100vw;
  flex-shrink: 0;
  border-top: 1px solid;
  border-color: black;
}

.study:hover{
  transform: scale(1.1);
  transition: 0.25s;
}
.study{
  transform: scale(1.0);
  transition: 0.25s;
}

.logoF{
  margin-left: 10%;
}
.rightf{
  margin-left: auto;
  margin-right: 11.5%;
  align-self: flex-end;
  margin-bottom: 20px;
  color: #FFF;
  font-size: 18px;
  font-family: "Lemon Milk","Catamaran";
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

